--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-spinners": "^0.13.6",
     "web-vitals": "^2.1.4",
-    "web3": "^0.20.6"
+    "web3": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
